﻿更新履歴

==== Ver 1.3.2-dev(2016/xx/xx)
 * FIX: 投稿欄の複数行入力が有効かつCtrl+Enterで投稿する設定の状態でハッシュタグの自動付与が行われない不具合を修正 (thx @nt776!)

==== Ver 1.3.1(2015/12/28)
 * CHG: ツイート投稿時に意図せずTwitterがSMSコマンドとして解釈することを防ぐ「SMSコマンドを回避する」オプションを追加
  - D, DM および M から始まるツイートを投稿するとSMSコマンドと解釈されてエラーとなる問題を回避します
  - v1.2.9 までの「APIコマンドを回避する」と異なり、末尾にピリオドを追加するのではなくゼロ幅スペース (U+200B) を使うため表示上目立ちにくくなりました
  - 画面右下の「▼」のメニューから無効にできます（デフォルトで有効）
 * CHG: 発言詳細部にリプライ先のツイートを表示する際は赤枠で表示し、引用ツイートと区別できるようにしました
 * FIX: リストおよび検索のタブでミュート設定が適用されない不具合を修正 (thx @Tan90909090!)
 * FIX: 「このタブの発言をクリア」を実行時にエラーが発生する不具合を修正
 * FIX: 各タブの「新着通知表示」が無効になっていると通知音が再生されなくなる不具合を修正
 * FIX: Imgurへの画像アップロードがタイムアウトとなった場合のエラーが適切に処理されない不具合を修正
 * FIX: 発言一覧の更新によって選択状態が失われたツイートを選択し直しても発言詳細部に反映されない不具合を修正 (thx @norick_v125!)

==== Ver 1.3.0(2015/12/23)
 * NEW: リプライ先のツイートの内容が発言詳細部に表示されるようにしました
  - 従来通り「関連発言表示」によるリプライチェインの表示も使用できます
 * NEW: NVDAでのタブ名の読み上げに対応しました
 * NEW: OpenTweenで内部エラーが発生した場合にエラーレポートをDMで送信できるようにしました
  - DM で送信する場合は、エラーレポートを圧縮した上で @OpenTween 宛に送られます
 * CHG: Retweetイベントのイベント一覧での表示を他のイベントと統一 (thx @naminodarie!)
 * CHG: スペースキーで未読ツイートに移動する順序を、常に表示順の通りに移動するように修正
  - OpenTween v1.2.4 以前と同じ動作になりました
 * CHG: プロフィール画面の「Web」「自己紹介」に含まれる短縮URLの展開に対応 (thx @naminodarie!)
 * CHG: Foursquareのサムネイル表示機能でチェックインURLの仕様変更に対応
 * CHG: 「APIコマンドを回避する」の機能を廃止
 * CHG: Ctrl+Insert キーで Ctrl+C と同じ機能が実行されるように変更 (Ctrl+Shift+Insert, Alt+Shift+Insert も同様)
 * CHG: 画像などの読み込み時にキャッシュが使われるように変更
  - サムネイル画像、プロフィール画像などがキャッシュの対象となります
 * FIX: Home/Endキーの直後に左右キーを押すと以前の選択ツイートの関連発言に移動してしまう不具合を修正 (thx @coookien!)
 * FIX: 発言詳細部のコンテキストメニューでURLをコピーすると「&」が「&amp;」としてコピーされる不具合を修正 (thx @pO_0q!)
 * FIX: タイムラインの流速が速い時に発言一覧のスクロールバーがちらつく現象を修正
 * FIX: ハッシュタグ設定画面で複数のハッシュタグをまとめて削除すると正しく削除されない不具合を修正 (thx @Tan90909090!)
 * FIX: RetweetイベントのTargetに「&gt;」「&lt;」などがデコードされずに表示されていた不具合を修正 (thx @naminodarie!)
 * FIX: 高DPI環境で一部の画面のレイアウトが崩れる問題を修正
  - 設定画面の「更新間隔」「発言一覧」や振り分けルール編集画面のリスト項目の高さなど
 * FIX: 不正なツイートURLを含む発言を受信するとエラーが発生する不具合を修正
 * FIX: リスト編集画面でリストメンバーの取得ボタンを連打するとエラーが発生する不具合を修正
 * FIX: サムネイル枠の横幅が起動するたびに広がる不具合を修正