@@ -35,7 +35,7 @@ namespace OpenTween.Thumbnail.Services
     class Pixiv : MetaThumbnailService
     {
         public static readonly string UrlPattern =
-            @"^https?://www\.pixiv\.net/(member_illust|index)\.php\?(?=.*mode=(medium|big))(?=.*illust_id=(?<illustId>[0-9]+)).*$";
+            @"^https?://(www|touch)\.pixiv\.net/(member_illust|index)\.php\?(?=.*mode=(medium|big))(?=.*illust_id=(?<illustId>[0-9]+)).*$";
 
         public Pixiv()
             : base(Pixiv.UrlPattern)
