@@ -1,6 +1,7 @@
 ﻿更新履歴
 
 ==== Ver 1.3.2-dev(2016/xx/xx)
+ * NEW: touch.pixiv.net のサムネイル表示に対応 (pixiv.net は既に対応しています)
  * FIX: 投稿欄の複数行入力が有効かつCtrl+Enterで投稿する設定の状態でハッシュタグの自動付与が行われない不具合を修正 (thx @nt776!)
 
 ==== Ver 1.3.1(2015/12/28)
